fix: ruff pre-commit restriction

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,18 @@ repos:
       - id: ruff
         types_or: [python, pyi]
         args: [
-          --fix, 
-          --exit-non-zero-on-fix, 
-          --config=pyproject.toml,
-          --select=F,I,Q,B  # Override select rules for pre-commit
-        ]
+            --fix,
+            --exit-non-zero-on-fix,
+            --config=pyproject.toml,
+            "--select=F,Q,I", # Override select rules for pre-commit
+          ]
       # Run the formatter
       - id: ruff-format
         types_or: [python, pyi]
-        args: [--config=pyproject.toml]
+        args: [
+            --config=pyproject.toml,
+            "--select=F,Q,I", # Override select rules for pre-commit
+          ]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
