fix: ruff pre-commit restriction

--- a/.pyproject.pre-commit.toml
+++ b/.pyproject.pre-commit.toml
@@ -1,4 +1,5 @@
+[tool.ruff]
 extend = "pyproject.toml"  # Inherit line-length and other settings
 
-[tool.ruff]
+[tool.ruff.lint]
 select = ["F", "Q", "I"]  # Override only select for pre-commit
