fix: ruff pre-commit restriction

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,8 @@ repos:
         args: [
             --fix,
             --exit-non-zero-on-fix,
-            --config=.pyproject.pre-commit.toml,
+            --config=pyproject.toml,
+            "--select=F,Q,I,"
           ]
       # Run the formatter
       - id: ruff-format
