--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -52,7 +52,7 @@ jobs:
       #  run: uv run pre-commit run --all-files
 
       - name: Lint with ruff
-        run: uv run ruff check --output-format=github --config=.pyproject.pre-commit.toml
+        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I
 
       - name: Check formatting
         run: uv run ruff format --check --diff --config=pyproject.toml
