--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,9 +84,12 @@ distribution = false
 
 [tool.ruff]
 line-length = 111
-exclude = ["evalap/api/alembic/versions/", "notebooks/"]
+
+[tool.ruff.format]
+exclude = ["evalap/api/alembic/versions/", "notebooks/", ".specify/", ".windsurf/", ".cursor/"]
 
 [tool.ruff.lint]
+exclude = [".specify/", ".windsurf/", ".cursor/"]
 select = [
     "F",    # Pyflakes (includes undefined variables)
     "E",    # pycodestyle errors
