fix: fix renovate.json5 configuration issues
- Fix JSON5 syntax error with github-actions property name
- Remove deprecated 'managers' field
- Remove 'force' option (global-only)
- Update config:base → config:recommended
- Update matchPaths → matchFileNames for npm rules
- Reorganize python/docker rules into top-level packageRules with matchCategories

--- a/renovate.json5
+++ b/renovate.json5
@@ -1,49 +1,12 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: [
-    "config:base",
+    "config:recommended",
     ":semanticCommitTypeAll(chore)",
     ":dependencyDashboard",
     ":semanticPrefixChore",
   ],
-  python: {
-    packageRules: [
-      {
-        matchManagers: ["uv"],
-        groupName: "Python dependencies",
-        groupSlug: "python-deps",
-        schedule: ["before 6am on monday"],
-        automerge: false,
-        prConcurrentLimit: 3,
-        prHourlyLimit: 2,
-        minimumReleaseAge: "3 days",
-        rangeStrategy: "bump",
-      },
-      {
-        matchManagers: ["uv"],
-        matchDepTypes: ["devDependencies"],
-        groupName: "Python dev dependencies",
-        groupSlug: "python-dev-deps",
-        schedule: ["before 6am on wednesday"],
-        automerge: false,
-      },
-    ],
-  },
-  docker: {
-    packageRules: [
-      {
-        matchManagers: ["dockerfile", "docker-compose"],
-        groupName: "Docker dependencies",
-        groupSlug: "docker-deps",
-        schedule: ["before 6am on tuesday"],
-        automerge: false,
-        prConcurrentLimit: 2,
-        prHourlyLimit: 1,
-        "minimumReleaseAge": "3 days"
-      }
-    ]
-  },
-  github-actions: {
+  "github-actions": {
     packageRules: [
       {
         matchManagers: ["github-actions"],
@@ -61,7 +24,7 @@
     packageRules: [
       {
         matchManagers: ["npm"],
-        matchPaths: ["docs/**"],
+        matchFileNames: ["docs/**"],
         groupName: "Docs npm dependencies",
         groupSlug: "docs-npm-deps",
         schedule: ["before 6am on monday"],
@@ -72,7 +35,7 @@
       },
       {
         matchManagers: ["npm"],
-        matchPaths: ["docs/**"],
+        matchFileNames: ["docs/**"],
         matchDepTypes: ["devDependencies"],
         groupName: "Docs npm dev dependencies",
         groupSlug: "docs-npm-dev-deps",
@@ -81,8 +44,40 @@
       },
     ],
   },
-  managers: ["uv", "npm", "dockerfile", "docker-compose", "github-actions"],
-  enabledManagers: ["uv", "npm", "dockerfile", "docker-compose", "github-actions"],
+  packageRules: [
+    {
+      matchCategories: ["python"],
+      matchManagers: ["uv"],
+      groupName: "Python dependencies",
+      groupSlug: "python-deps",
+      schedule: ["before 6am on monday"],
+      automerge: false,
+      prConcurrentLimit: 3,
+      prHourlyLimit: 2,
+      minimumReleaseAge: "3 days",
+      rangeStrategy: "bump",
+    },
+    {
+      matchCategories: ["python"],
+      matchManagers: ["uv"],
+      matchDepTypes: ["devDependencies"],
+      groupName: "Python dev dependencies",
+      groupSlug: "python-dev-deps",
+      schedule: ["before 6am on wednesday"],
+      automerge: false,
+    },
+    {
+      matchCategories: ["docker"],
+      matchManagers: ["dockerfile", "docker-compose"],
+      groupName: "Docker dependencies",
+      groupSlug: "docker-deps",
+      schedule: ["before 6am on tuesday"],
+      automerge: false,
+      prConcurrentLimit: 2,
+      prHourlyLimit: 1,
+      "minimumReleaseAge": "3 days"
+    },
+  ],
   rangeStrategy: "bump",
   rebaseWhen: "conflicted",
   labels: ["dependencies"],
@@ -105,12 +100,6 @@
     automerge: false,
   },
   ignoreDeps: [],
-  force: {
-    constraints: {
-      python: ">=3.12",
-      node: ">=18.0",
-    },
-  },
   constraints: {
     python: ">=3.12",
     node: ">=18.0",
