--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -59,10 +59,10 @@ jobs:
       #  run: uv run pre-commit run --all-files
 
       - name: Lint with ruff
-        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I
+        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I --exclude=.cursor/,.specify/,.windsurf/
 
       - name: Check formatting
-        run: uv run ruff format --check --diff --config=pyproject.toml
+        run: uv run ruff format --check --diff --config=pyproject.toml --exclude=.cursor/,.specify/,.windsurf/
 
       - name: Setup test database
         env:
